[gd_scene load_steps=9 format=3 uid="uid://di5vvvct4iw0j"]

[ext_resource type="Script" path="res://Titlescreen.gd" id="1"]
[ext_resource type="PackedScene" path="res://Shader.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://mdq4i5hkkf41" path="res://Sprites/TitleHills.png" id="4"]
[ext_resource type="Script" path="res://Backdrop.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://c0ncgkywfkxk6" path="res://Sound/TitleLanding.wav" id="6"]

[sub_resource type="ViewportTexture" id="4"]
viewport_path = NodePath("Viewport")

[sub_resource type="Animation" id="3"]
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Viewport/Backdrop/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Viewport/Backdrop/Title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2.5),
"transitions": PackedFloat32Array(1, 0.392292, 1),
"update": 0,
"values": [Vector2(0, -225), Vector2(0, -225), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Viewport/Backdrop/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"title_sound"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Viewport/Backdrop")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.3],
"method": &"add_trauma"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvq2f"]
_data = {
"Intro": SubResource("3")
}

[node name="Titlescreen" type="Node"]
script = ExtResource("1")

[node name="Shader" parent="." instance=ExtResource("2")]
visible = false

[node name="Viewport" type="SubViewport" parent="."]
size = Vector2i(400, 225)
render_target_update_mode = 3

[node name="TitleMenu" type="CanvasLayer" parent="Viewport"]

[node name="MarginContainer" type="MarginContainer" parent="Viewport/TitleMenu"]
anchors_preset = -1
anchor_top = 0.020643
anchor_right = 1.0
anchor_bottom = 1.013

[node name="VBoxContainer" type="VBoxContainer" parent="Viewport/TitleMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
alignment = 1

[node name="Start" type="Button" parent="Viewport/TitleMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = " START"
flat = true

[node name="Backdrop" type="Node2D" parent="Viewport"]
z_index = 1
script = ExtResource("5")

[node name="Title" type="Sprite2D" parent="Viewport/Backdrop"]
position = Vector2(0, -225)
texture = ExtResource("4")
centered = false
hframes = 3
vframes = 3
frame = 7

[node name="Sprite" type="Sprite2D" parent="Viewport/Backdrop"]
visible = false
texture = ExtResource("4")
centered = false
hframes = 3
vframes = 3
frame = 5

[node name="ColorRect" type="ColorRect" parent="Viewport"]
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture = SubResource("4")

[node name="SoundTitle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = -5.977
pitch_scale = 1.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hvq2f")
}

[node name="BlinkingTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_BlinkingTimer_timeout"]
